feat: implement domain repositories, services, and navigation framework for user management and accounting modules